--- a/image_with_form_link.html
+++ b/image_with_form_link.html
@@ -22,7 +22,7 @@
 </head>
 <body>
   <h2>登録はこちらから</h2>
-  <img src="https://example.com/your-image.jpg" alt="案内画像">
+  <img src="https://drive.google.com/file/d/1yUStxc8DEqG4RpCSBgs3xRqNIMhjw7_p/view?usp=sharing" alt="案内画像">
   <br>
   <a href="https://docs.google.com/forms/d/e/1FAIpQLSf8kk6gZiyXGovsdWnnmNKo2OYlksGAjjt0sGmKqDMiXe9_hw/viewform" class="btn">
     フォームを開く
