--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-578X1SMY51"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-578X1SMY51');
+</script>
+
   <meta charset="UTF-8">
   <title>Redirecting to Google Form</title>
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
